# demo-agent-LangChain

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  config.py  config_loader.py  health_check.py  logger.py  main.py  multi_agent.py  multimodal.py  prompt_manager.py  pyproject.toml  rag.py  requirements.txt  resilience.py  session_manager.py  structured_output.py  web_app.py
.github/workflows/: ci.yml
agent/: base_agent.py
deploy/: Dockerfile  docker-compose.yml
docs/: IMPROVEMENTS.md
prompts/: analyst.yaml  assistant.yaml  coder.yaml  customer_service.yaml
static/: index.html
tests/: test_api.py  test_calculator.py  test_logger.py  test_security.py  test_session.py  test_tools.py
tools/: base.py  calculator_tool.py  datetime_tool.py  file_tool.py  search_tool.py  weather_tool.py
