# ============================================================
# 项目元数据 + 工具配置
# ============================================================

[project]
name = "langchain-agent-demo"
version = "2.1.0"
description = "基于LangChain的多工具AI智能助手"
requires-python = ">=3.11"
license = { text = "MIT" }

# ==================== ruff (lint + format) ====================

[tool.ruff]
target-version = "py311"
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B904",  # raise from within except
]
line-length = 100

[tool.ruff.lint.isort]
known-first-party = ["config", "logger", "session_manager"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

# ==================== mypy (type check) ====================

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
exclude = [".venv/", "tests/"]
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

# ==================== pytest ====================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: 慢速测试（标记后默认跳过）",
    "integration: 集成测试（需要外部服务）",
    "unit: 单元测试",
]

[tool.coverage.run]
source = ["."]
omit = [".venv/*", "tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
